--- a/package.json
+++ b/package.json
@@ -3,28 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx,cjs,cts,mjs,mts,html,vue}\" \"test/**/*.{js,ts,jsx,tsx,cjs,cts,mjs,mts,html,vue}\"",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^5.16.7",
+    "@rjsf/mui": "^5.20.1",
+    "@rjsf/utils": "^5.20.1",
+    "@rjsf/validator-ajv8": "^5.20.1",
+    "bootstrap": "4.6",
+    "chart.js": "^4.4.4",
+    "gojs": "^3.0.10",
+    "gojs-react": "^1.1.2",
     "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18",
+    "react-tabs": "^6.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.7",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "postcss": "^8",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
