--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@rjsf/utils": "^5.20.1",
     "@rjsf/validator-ajv8": "^5.20.1",
     "axios": "^1.7.7",
-    "bootstrap": "4.6",
+    "bootstrap": "5.0.0",
     "chart.js": "^4.4.4",
     "dotenv": "^16.4.5",
     "gojs": "^3.0.10",
     "gojs-react": "^1.1.2",
-    "next": "14.2.7",
+    "next": "^14.2.10",
     "openai": "^4.73.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
